src/test/deca/context/valid/class_with_setter.deca
// Test pour une classe avec constructeur:

class Person {
    float intelligence;
    int age;
    void init(float intelligence, int age) {
        this.intelligence = intelligence;
        this.age = age;
    }
}